# DogBot

./: .dockerignore  .gitignore  AGENTS.md  README.md  deploy_stack.sh  stop_stack.sh
agent-runner/: Cargo.toml
agent-runner/src/: api_proxy.rs  api_proxy_config.rs  bootstrap.rs  config.rs  dispatch.rs  docker_client.rs  env_helpers.rs  exec.rs  inbound_models.rs  lib.rs  main.rs  messenger.rs  models.rs  normalizer.rs  pipeline.rs  provenance_store.rs  rendering.rs  scheduler.rs  server.rs  session_store.rs  trigger_resolver.rs
agent-runner/src/context/: context_pack.rs  identity.rs  memory_intent.rs  mod.rs  object_store.rs  policy.rs  repo_loader.rs  scope.rs
agent-runner/src/history/: cleanup.rs  mod.rs  retrieval.rs  store.rs
agent-runner/src/protocol/: asset.rs  event.rs  message.rs  mod.rs  outbound.rs
agent-runner/tests/: api_proxy_tests.rs  compose_contract_tests.rs  config_tests.rs  context_run_tests.rs  context_scope_tests.rs  context_store_tests.rs  dispatch_tests.rs  docker_client_tests.rs  history_cleanup_tests.rs  history_ingest_tests.rs  history_retrieval_tests.rs  http_api_tests.rs  inbound_api_tests.rs  normalizer_tests.rs  pipeline_tests.rs  platform_http_delivery_tests.rs  platform_ingress_delivery_tests.rs  platform_qq_tests.rs  platform_wechatpadpro_tests.rs  prompt_contract_tests.rs  protocol_tests.rs  rendering_tests.rs  repo_loader_tests.rs  session_store_tests.rs  trigger_resolver_tests.rs
claude-prompt/: CLAUDE.md  ertai-persona.md  persona.md
compose/: README.md  docker-compose.yml  platform-stack.yml  wechatpadpro-stack.yml
(+124 files in other folders)
