[package]
name = "agent-runner"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
bollard = "0.18"
axum = "0.8"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
